# Twitter_clone

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
backend/: build.sh
backend/api/: serializers.py  views.py
backend/tweets/: models.py
backend/tweets/migrations/: 0001_initial.py  0002_comment.py
backend/twitter_clone/: settings.py  urls.py
backend/users/: models.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: CommentSection.jsx  EditProfile.jsx  Feed.jsx  FollowButton.jsx  Login.jsx  Navbar.jsx  ProtectedRoute.jsx  Register.jsx  TweetForm.jsx  TweetItem.jsx  UserListModal.jsx  UserProfile.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: Explore.jsx
