[project]
name = "twitter-clone"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcus",email = "marcusowlvl1@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "autoflake (>=2.3.3,<3.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]
